--- a/index.html
+++ b/index.html
@@ -508,7 +508,24 @@
                 <aside id="iv44k" class="quick-commands">
                     <h3 id="icxut" class="commands-title">Quick Commands</h3>
                     <div id="iqw3i" class="commands-list">
-                        <button type="button" data-command="!mp start 10" id="idwlu" class="command-button">!mp start 10</button><button type="button" data-command="!mp abort" id="iqlu8" class="command-button">!mp abort</button><button type="button" data-command="!mp kick " id="i7i0s" class="command-button">!mp kick &lt;player&gt;</button><button type="button" data-command="!mp move " id="ies37" class="command-button">!mp move &lt;player&gt; &lt;slot&gt;</button><button type="button" data-command="!mp host " id="ihhlq" class="command-button">!mp host &lt;player&gt;</button><button type="button" data-command="!mp clearhost" id="itdbh" class="command-button">!mp clearhost</button><button type="button" data-command="!mp settings" id="i42mn" class="command-button">!mp settings</button><button type="button" data-command="!mp timer " id="i7prvm" class="command-button">!mp timer &lt;seconds&gt;</button>
+                        <button type="button" data-command=">help" id="iaaa" class="command-button">>help</button>
+                        <button type="button" data-command=">start" id="idwlu" class="command-button">>start</button>
+                        <button type="button" data-command=">abort" id="iqlu8" class="command-button">>abort</button>
+                        <button type="button" data-command=">invite" id="iaaaa" class="command-button">>invite</button>
+                        <button type="button" data-command=">skip" id="iaaab" class="command-button">>skip</button>
+                        <button type="button" data-command=">close" id="iaaac" class="command-button">>close</button>
+                        <button type="button" data-command=">abort" id="iaaad" class="command-button">>abort</button>
+                        <button type="button" data-command=">auto" id="iaaae" class="command-button">>auto &lt;on/off&gt;</button>
+                        <button type="button" data-command=">map " id="iaaaf" class="command-button">>map &lt;code&gt; &lt;round&gt;</button>
+                        <button type="button" data-command=">mod" id="iaaag" class="command-button">>mod</button>
+                        <button type="button" data-command=">addref " id="iaaah" class="command-button">>addref &lt;user&gt;</button>
+                        <button type="button" data-command=">removeref " id="iaaai" class="command-button">>removeref &lt;user&gt;</button>
+                        <button type="button" data-command="!mp kick " id="i7i0s" class="command-button">!mp kick &lt;player&gt;</button>
+                        <button type="button" data-command="!mp move " id="ies37" class="command-button">!mp move &lt;player&gt; &lt;slot&gt;</button>
+                        <button type="button" data-command="!mp host " id="ihhlq" class="command-button">!mp host &lt;player&gt;</button>
+                        <button type="button" data-command="!mp clearhost" id="itdbh" class="command-button">!mp clearhost</button>
+                        <button type="button" data-command="!mp settings" id="i42mn" class="command-button">!mp settings</button>
+                        <button type="button" data-command=">timeout" id="i7prvm" class="command-button">>timeout</button>
                         <script>
                             // Link command buttons to message input
                             document.querySelectorAll('#iqw3i .command-button').forEach(button => {
