解决package.json中的拼写问题&打开链接后会覆盖botUI的问题

--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
                     </div>
                 </div>
             </div>
-            <h1 style="color: greenyellow; font-size: 26px;">Made by <a href="https://osu.ppy.sh/users/33138632">31415906</a>&<a href="https://osu.ppy.sh/users/29319435">heipizhu</a></h1>
-            <a href="https://osu.ppy.sh/users/26795413" style="color: lightgray; font-size: 7px;">Special thanks:xiaobaidan</a>
-            <h1 style="color: orangered; font-size: 16px;"><a href="https://github.com/31415906/osu-qualifiers-autoref">仓库链接</a></h1>
+            <h1 style="color: greenyellow; font-size: 26px;">Made by <a target="_blank" href="https://osu.ppy.sh/users/33138632">31415906</a>&<a target="_blank" href="https://osu.ppy.sh/users/29319435">heipizhu</a></h1>
+            <a target="_blank" href="https://osu.ppy.sh/users/26795413" style="color: lightgray; font-size: 7px;">Special thanks:xiaobaidan</a>
+            <h1 style="color: orangered; font-size: 16px;"><a target="_blank" href="https://github.com/31415906/osu-qualifiers-autoref">仓库链接</a></h1>
         </aside><!-- Right Main Area -->
         <main class="right-main-area">
             <!-- Connection Status -->
