--- a/index.html
+++ b/index.html
@@ -407,13 +407,13 @@
             <div id="ilqi3" class="beatmap-info-section">
                 <div id="icdgi" class="beatmap-image-container">
                     <!--1319651-->
-                    <img id="beatmapImage" src="https://assets.ppy.sh/beatmaps/626034/covers/cover.jpg" alt="Beatmap cover art" loading="lazy" class="beatmap-image" />
+                    <img id="beatmapImage" src="https://assets.ppy.sh/beatmaps/1011011/covers/cover.jpg" alt="Beatmap cover art" loading="lazy" class="beatmap-image" />
                 </div>
                 <div id="beatmapDetails" class="beatmap-details">
-                    <p class="song-name"><span id="songName">这是一个example,对，上面那个也是</span></p>
-                    <p class="difficulty-info"><span id="difficultyName">东方真好看吧</span> by <span id="mapper">我喜欢你</span></p>
+                    <p class="song-name"><span id="songName">这是一个example</span></p>
+                    <p class="difficulty-info"><span id="difficultyName">osu真好看吧</span> by <span id="mapper">我喜欢你</span></p>
                     <div id="iqxsd" class="beatmap-stats">
-                        <span>HP: <span id="hp" class="cls-9v3b6g">对的曲绘是东方的</span></span><span>★ <span id="star" class="cls-r7nfjv">daze</span></span><span>BPM: <span id="bpm" class="cls-g3f3qu">曲绘的bpm是135哟</span></span><span>Length: <span id="length" class="cls-wdfp7u">infinite</span>s</span>
+                        <span>HP: <span id="hp" class="cls-9v3b6g">0</span></span><span>★ <span id="star" class="cls-r7nfjv">daze</span></span><span>BPM: <span id="bpm" class="cls-g3f3qu">130</span></span><span>Length: <span id="length" class="cls-wdfp7u">127</span>s</span>
                     </div>
                 </div>
             </div>
